@@ -42,7 +42,7 @@
 	/* Enums: */
 		enum KeyboardHostWithParser_GetHIDReportDataCodes_t
 		{
-			ParseSucessful          = 0,
+			ParseSuccessful         = 0,
 			ParseError              = 1,
 			ParseControlError       = 2,
 		};
