@@ -36,6 +36,9 @@ void Serial_Init(const uint16_t BaudRate)
 	UCSR1B = ((1 << RXEN1)  | (1 << TXEN1));
 	UCSR1C = ((1 << UCSZ11) | (1 << UCSZ10));
 	
+	DDRD  |= (1 << 3);	
+	PORTD |= (1 << 2);
+	
 	UBRR1  = SERIAL_UBBRVAL(BaudRate);
 }
 
