@@ -123,8 +123,11 @@ ISR(USB_GEN_vect, ISR_BLOCK)
 		RAISE_EVENT(USB_Suspend);
 
 		#if defined(USB_LIMITED_CONTROLLER) && !defined(NO_LIMITED_CONTROLLER_CONNECT)
-		USB_IsConnected = false;
-		RAISE_EVENT(USB_Disconnect);
+		if (USB_IsConnected)
+		{
+			USB_IsConnected = false;
+			RAISE_EVENT(USB_Disconnect);
+		}
 		#endif
 	}
 
@@ -144,8 +147,11 @@ ISR(USB_GEN_vect, ISR_BLOCK)
 		USB_INT_Enable(USB_INT_SUSPEND);
 		
 		#if defined(USB_LIMITED_CONTROLLER) && !defined(NO_LIMITED_CONTROLLER_CONNECT)
-		USB_IsConnected = true;
-		RAISE_EVENT(USB_Connect);
+		if (!(USB_IsConnected))
+		{
+			USB_IsConnected = true;
+			RAISE_EVENT(USB_Connect);
+		}
 		#endif
 
 		USB_IsSuspended = false;
